--- a/app/views/layouts/pages.haml
+++ b/app/views/layouts/pages.haml
@@ -10,16 +10,8 @@
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
-  %body
+  %body#pages
     
-    - unless current_user
-      .modal.hide
-        .modal-header
-          Hey
-        .modal-body
-          Log in first!
-
-
     .navbar.navbar-inverse
       .navbar-inner
         .container
@@ -33,10 +25,4 @@
                   %li= link_to "Register", new_user_registration_path
                   %li= link_to "Login", new_user_session_path
               = link_to "Poker for Programmers", root_path, class: "brand"
-    .container
-      .row
-        .span12
-          - flash.each do |key, msg|
-            .alert{class: "alert-#{key}"}
-              = msg
-          = yield
+    = yield
